--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+//commenting
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Calculator</title>
 </head>
-
+//declaring body
 <body>
 
     <!--Html code for calculator-->
@@ -49,5 +49,5 @@
     <script src="script.js"></script>
 </body>
 
-
+//ending
 </html>
